# sts_hardware_interface

./: .ci-setup-summary.md  .clang-tidy  .clang-tidy-integration-summary.md  .github-actions-summary.md  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ENABLE_CI_CD.md  IMPROVEMENTS.md  LICENSE  MOTOR_DIRECTION_HANDLING.md  POSITION_ZEROING.md  README.md  SIMPLIFICATION_CHANGELOG.md  package.xml  sts_hardware_interface.xml
.github/: dependabot.yml
.github/workflows/: build-test.yml  clang-tidy.yml  lint.yml  pr-comments-check.yml  release.yml
config/: mixed_mode.urdf.xacro  mixed_mode_controllers.yaml  motor_diagnostics_config.yaml  single_motor.urdf.xacro  single_motor_position.urdf.xacro  single_motor_position_controllers.yaml  velocity_controller.yaml
docs/: CI_CD.md  CLANG_TIDY.md  INDEX.md  PACKAGE_OVERVIEW.md  PERFORMANCE_MONITORING.md  _config.yml  architecture.md  design-decisions.md  design.md  implementation-guide.md  index.md  migration-guide.md  quick-start.md  safety-features.md
docs/assets/mermaid/: image_gen.txt  system_architecture.mmd
docs/plans/: 2026-03-01-test-suite-design.md  2026-03-01-test-suite-plan.md
include/sts_hardware_interface/: sts_conversions.hpp  sts_hardware_interface.hpp
launch/: mixed_mode.launch.py  motor_diagnostics.launch.py  single_motor.launch.py  single_motor_position.launch.py  single_motor_velocity.launch.py
src/: motor_diagnostics_node.cpp  sts_hardware_interface.cpp
test/: test_conversions.cpp  test_hardware_interface.cpp  test_mixed_mode.launch.py  test_motor_diagnostics.launch.py  test_single_motor.launch.py  test_single_motor_position.launch.py  test_single_motor_velocity.launch.py
