<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sts_hardware_interface</name>
  <version>0.1.0</version>
  <description>ROS 2 hardware interface for Feetech STS series servo motors</description>
  <maintainer email="adityakamath@live.com">adityakamath</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>diagnostic_updater</depend>

  <!-- SCServo motor control SDK -->
  <!-- Note: SCServo_Linux is included as a git submodule in external/ and built automatically -->
  <build_depend>python3-dev</build_depend>
  <buildtool_depend>python3-nanobind</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/sts_hardware_interface.xml"/>
  </export>
</package>
