<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sts_hardware_interface</name>
  <version>0.3.0</version>
  <description>
    ros2_control hardware interface for Feetech STS series servo motors.
    Supports multiple operating modes (position, velocity, PWM), multi-motor coordination
    with SyncWrite, emergency stop, hardware limits, automatic error recovery, and mock mode
    for simulation. Compatible with ROS 2 Humble and later.
  </description>

  <author email="adityakamath@live.com">Aditya Kamath</author>
  <maintainer email="adityakamath@live.com">Aditya Kamath</maintainer>

  <license>Apache-2.0</license>

  <url type="website">https://github.com/adityakamath/sts_hardware_interface</url>
  <url type="repository">https://github.com/adityakamath/sts_hardware_interface</url>
  <url type="bugtracker">https://github.com/adityakamath/sts_hardware_interface/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/sts_hardware_interface.xml"/>
  </export>
</package>
